fixed scaling, workingon horizontal scroll

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,9 +1,9 @@
-body {
+body, html {
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	color: #3d3d3d;
 	margin: 0px;
 	padding: 0px;
-	overflow:hidden;
+	overflow-x:hidden;
 	width:100%;
 	height:100%
 }
